the navbar now wraps visually correct

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,3 +26,14 @@
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.navbar {
+  height: fit-content;
+}
+.navbar__items {
+  flex-wrap: wrap;
+  align-self: start;
+}
+.navbar__items--right {
+  align-self: center;
+}
